# isfna

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  isfna.bootstrap.json  pyproject.toml
.github/workflows/: ci.yml
docs/: DEPENDENCIES.md  TESTING.md
scripts/: container-smoke.sh
skills/master-init/: SKILL.md
skills/self-learning-loop/: SKILL.md
src/isfna/: agents.py  bootstrap.py  cli.py  gitops.py  install.py  tui.py
