[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isfna"
version = "0.1.0"
description = "Init Skills For New Agent: universal bootstrap CLI and master init skill for agent systems"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "isfna contributors" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
isfna = "isfna.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
